--- a/style.css
+++ b/style.css
@@ -1,17 +1,36 @@
 body {
   font-family:sans-serif;  
   margin: 0;
+  
+ display: flex;
+ flex-direction: column;
+ 
+ 
+}
+
+.header-hero {
   background-color: #1f2937;
-  margin-left: 150px;
-  margin-right: 150px;
+  
 }
 
 .header {
 display: flex;
 justify-content: space-between;
 margin-bottom: 100px;
+margin-left: 150px;
+margin-right: 150px;
 
 }
+
+.footer {
+display: flex;
+justify-content: center;
+color: #E5E7EB;
+font-size: 18px;
+margin-left: 150px;
+margin-right: 150px;
+}
+
 
 .links {
 display: flex;
@@ -26,22 +45,73 @@ a {
     text-decoration: none;
 }
 
-*/Currently trying to determine if seperate flex boxes are needed for the text, image and button in the below section*/
-
-.Hero {
- display: flex;
- flex-direction: column;
- justify-content: space-evenly;
- width: 400px;
-height: 200px;
+.hero {
+  display: flex;
+  justify-content: space-between;
+  margin: 150px;
+  margin-top: -50px;
 }
 
-.hero-text {
-display: flex;
-flex-shrink: 2;
+h1 {
+  color: #E5E7EB;
+  width: 300px;
 }
 
-.tall-trees {
-display: flex;
-flex-grow: 2;
+
+.hero-left {
+  display: flex;
+  flex-direction: column;
+  
+  
+}
+
+.hero-left p {
+  color: #E5E7EB;
+flex-wrap: wrap;
+  width: 600px;
+ 
+
+}
+
+.hero-right {
+  display: flex;
+  flex-direction: row;
+ align-items: flex-end;
+  
+}
+
+.hero-right img {
+  
+ height: 200px;
+  width: 430px;
+}
+
+
+
+.hero-left button {
+  width: 175px;
+  padding: 5px;
+  border-radius: 10px; 
+  background-color: #3882f6;
+  border-color: #3882f6;
+  color: #E5E7EB;
+}
+
+
+
+
+.adventures {
+  margin: 150px;
+}
+
+.adv-text {
+  display: flex;
+  justify-content: center;
+  margin-top: -125px;
+  padding-bottom: 30px;
+}
+
+.adv-options {
+  display: flex;
+ 
 }
