--- a/style.css
+++ b/style.css
@@ -1,48 +1,45 @@
 body {
   font-family:sans-serif;  
   margin: 0;
-  
- display: flex;
- flex-direction: column;
- 
- 
+  display: flex;
+  flex-direction: column;
 }
 
 .header-hero {
   background-color: #1f2937;
-  
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-display: flex;
-justify-content: space-between;
-margin-bottom: 100px;
-margin-left: 150px;
-margin-right: 150px;
-
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 100px;
+  margin-left: 150px;
+  margin-right: 150px;
 }
 
 .footer {
-display: flex;
-justify-content: center;
-color: #E5E7EB;
-font-size: 18px;
-margin-left: 150px;
-margin-right: 150px;
+  display: flex;
+  justify-content: center;
+  background-color: #1f2937;
+  color: #E5E7EB;
+  font-size: 18px;
+  
 }
 
 
 .links {
-display: flex;
-justify-content: space-around;
-gap: 20px;
-list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  list-style-type: none;
 }
 
 a {
-    color: #E5E7EB;
-    font-size: 18px;
-    text-decoration: none;
+  color: #E5E7EB;
+  font-size: 18px;
+  text-decoration: none;
 }
 
 .hero {
@@ -61,32 +58,24 @@ h1 {
 .hero-left {
   display: flex;
   flex-direction: column;
-  
-  
 }
 
 .hero-left p {
   color: #E5E7EB;
-flex-wrap: wrap;
+  flex-wrap: wrap;
   width: 600px;
- 
-
 }
 
 .hero-right {
   display: flex;
   flex-direction: row;
- align-items: flex-end;
-  
+  align-items: flex-end; 
 }
 
 .hero-right img {
-  
- height: 200px;
+  height: 200px;
   width: 430px;
 }
-
-
 
 .hero-left button {
   width: 175px;
@@ -101,17 +90,135 @@ flex-wrap: wrap;
 
 
 .adventures {
-  margin: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 150px;
+  margin-right: 150px;
 }
 
 .adv-text {
   display: flex;
-  justify-content: center;
-  margin-top: -125px;
+  flex-direction: column;
+  align-items: center;
   padding-bottom: 30px;
 }
 
+.adv-text h2 {
+    font-weight: bolder;
+    color: #1f2937;
+    font-size: 36px;
+  }
+ 
 .adv-options {
   display: flex;
- 
+  justify-content: space-around;
+  width: 100%;
 }
+
+.adv-image {
+  display: flex;
+  flex-direction: column;
+}
+
+.adventures img {
+  display: flex;
+  width: 175px;
+  height: 175px; 
+}
+
+.adventures p {
+  color: grey;
+  font-size: 18px;
+  width: 175px;
+  text-align: center;
+}
+
+
+
+.quote {
+display: flex;
+background-color: #E5E7EB;
+padding: 150px;
+flex-direction: column;
+
+}
+
+.quotee1 {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.quotee1 p {
+  font-size: 36px;
+  font-style: italic;
+  font-weight:lighter;
+  color: #1f2937;
+}
+
+.quotee2 {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 525px;
+}
+
+.quotee2 p {
+  font-weight: bold;
+}
+
+
+.action {
+  display: flex;
+  justify-content: space-between;
+  margin: 100px;
+  margin-left: 625px;
+  margin-right: 625px;
+  border-radius: 10px; 
+  padding: 15px;
+  background-color: #3882f6;
+  border-color: #3882f6;
+  color: #E5E7EB;
+  flex-wrap: wrap;
+  padding-left: 150px;
+  padding-right: 150px;
+  
+}
+
+.action div {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.action h4 {
+  margin-bottom: 5px;
+  font-size: 24 px;
+  font-weight: 700;
+}
+
+.action p {
+  margin-top: 0;
+  
+}
+
+
+.action-button {
+  display: flex;
+ justify-content: center;
+  margin-left: 10px;
+  
+}
+
+.action button {
+  background-color: #3882f6;
+  border-color: #E5E7EB;
+  border-radius: 5px; 
+  padding-left: 25px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: #E5E7EB;
+  font-weight: bold;
+}
+
